--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,62 @@
     transform: rotate(360deg);
   }
 }
+.layout{
+  width: 85%;
+  margin: 0 auto;
+}
+
+.header{
+  display: flex;
+  height: 132px;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  border-bottom: 3px solii  black;
+  margin-bottom: 35px;
+}
+.header .logo{
+  flex-grow: 2;
+}
+.header nav{
+  flex-grow: 1;
+}
+.header nav ul{
+  height: 132px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+}
+.header li{
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 19px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+.header li a{
+  color: black;
+  text-decoration: none;
+  transition: all 300ms;
+}
+.header .active,
+.header a:hover{
+  color: #fa4529;
+}
+.content{
+  min-height: 400px;
+}
+
+.footer{
+  line-height: 100px;
+  text-align: center;
+  background-color: #f5f5f5;
+  min-height: 150px;
+  
+}
+.home h1{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  font-size: 60px;
+}
