--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,21 @@
   margin-left: 15px;
   margin-right: 15px;
 }
+
+.animated-header {
+  transition: opacity 0.3s; 
+  cursor: pointer;
+}
+
+.animated-header:hover {
+  opacity: 0.7;
+}
+
+
+.animated-header-alt {
+  opacity: 1;
+}
+
 .header li a{
   color: black;
   text-decoration: none;
@@ -94,4 +109,27 @@
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: 400;
   font-size: 60px;
+}
+.home h2{
+  font-weight: 400;
+  font-size: 60px;
+  font-size: 20px;
+  color: rgb(148, 146, 146);
+}
+
+.home h4{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  font-size: 50px;
+}
+.home a{
+  padding: 7px;
+  border-radius: 5px;
+  color: white;
+  background-color: #FF5733;
+  text-decoration: none;
+}
+
+.home strong{
+  color: #FF5733;
 }
